<resources>
    <string name="app_name">Dessert</string>

    <!-- Strings related to login and register -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="placeholder_email">Enter email</string>
    <string name="placeholder_username">Enter username</string>
    <string name="prompt_password">Password</string>
    <string name="placeholder_password">Enter password</string>

    <string name="action_log_in">Login</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register"><u><b>No account?</b></u> </string>

    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Common strings -->
    <string name="title_dessert">Dessert</string>

    <!-- Strings related to Main -->
    <string name="title_home">Home</string>
    <string name="title_modules">Modules</string>
    <string name="title_profile">Profile</string>

    <!-- Strings related to Home (my modules) -->
    <string name="home_title">My modules</string>

    <!-- Strings related to Profile -->
    <string name="profile_username">\@username</string>
    <string name="profile_title">Profile</string>
    <string name="profile_logout">Logout</string>
    <string name="profile_documentation">Docs</string>
    <string name="profile_tokens_title">Tokens</string>

    <!-- Strings related to Documentation -->
    <string name="documentation_title">Documentation</string>
    <string name="documentation_who_are_we"><a href="https://bit.ly/32ethhZ">Who Are We ?</a></string>
    <string name="documentation_why_dessert"><a href="https://bit.ly/35ksr4W">Why Dessert ?</a></string>
    <string name="documentation_quickstart_guide"><a href="https://bit.ly/2ZpeLBU">Quickstart Guide</a></string>
    <string name="documentation_cli"><a href="https://bit.ly/2GKQoIC">CLI Documentation</a></string>

    <!-- Strings related to Modules -->
    <string name="modules_result">No result found</string>
</resources>